2004-02-26  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-application.c: (imrp_application_id_set_data):
	* libplanner/mrp-application.h:
	* libplanner/mrp-private.h: Fix a few warnings.

	* src/planner-sql-plugin.c (sql_plugin_retrieve_db_values): Don't
	set NULL strings as gconf values.

2004-02-17  Alvaro del Castillo  <acs@barrapunto.com>
	
	* libplanner/mrp-project.c
	* libplanner/mrp-resource.c
	* libplanner/mrp-resource.h
	* libplanner/mrp-task.c
	* src/planner-assignment-model.c
	* src/planner-group-dialog.c
	* src/planner-resource-view.c
	Completed the undo/redo stuff for resources and groups
	except the resource dialog that needs some thoughts.
	Started the implementation of free methods in undo/redo commands.
	Cleaned the use of object ids for the moment.
	Cleaned the object clone methods.
	* src/planner-test-plugin.c: cleaned test output

2004-02-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-view.c (init): Fix icon/stock names.

	* src/planner-ttable-view.c (get_menu_label, get_label): Use title
	style and fix clashing access keys.

2004-02-14  Richard Hult  <richard@imendio.com>

	* data/images/24_link_task.png:
	* data/images/Makefile.am:
	* data/ui/gantt-view.ui:
	* data/ui/task-view.ui:
	* src/planner-application.c:
	* src/planner-gantt-view.c:
	* src/planner-task-tree.c:
	* src/planner-task-view.c: Add menu item and toolbar button for
	Link tasks, patch from Lincoln Phipps.

2004-02-14  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: (window_undo_state_changed_cb),
	(window_redo_state_changed_cb): Work around a bug, needs to be
	fixed later, see bug #134357.

	* autogen.sh: Check for gtkdocize and run it.

2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-group.c 
	* src/planner-cmd-manager.c
	* src/planner-group-dialog.c
	Clean from a wrong commit

2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>

	* po/es.po
	Use the same translation for manager (encargado) in all places